crates/gridwell-writer-ansi/tests/snapshots/snapshots__minimal-1x1.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┐
│[1m Value      [0m│
├────────────┤
│ Hello      │
└────────────┘
