crates/gridwell-writer-ansi/tests/snapshots/snapshots__mixed-markup.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌─────────────────────────────────┐
│[1m Message                         [0m│
├─────────────────────────────────┤
│ Status: degraded Retry advised† │
└─────────────────────────────────┘
  † See runbook section 4.
