crates/gridwell-writer-ansi/tests/snapshots/snapshots__multi-col-stub.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┬────────────┐
│[1m Region     [0m│[1m City       [0m│[1m Sales      [0m│[1m Growth     [0m│
├────────────┼────────────┼────────────┼────────────┤
│ East       │ NYC        │ 60         │ 3%         │
│ West       │ LA         │ 50         │ 2%         │
└────────────┴────────────┴────────────┴────────────┘
