crates/gridwell-writer-ansi/tests/snapshots/snapshots__nested-spanners.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┬────────────┐
│[1m Group A                 [0m│[1m Group B                 [0m│
│[1m A1         [0m│[1m A2         [0m│[1m B1         [0m│[1m B2         [0m│
├────────────┼────────────┼────────────┼────────────┤
│ 1          │ 2          │ 3          │ 4          │
│ 5          │ 6          │ 7          │ 8          │
└────────────┴────────────┴────────────┴────────────┘
