crates/gridwell-writer-ansi/tests/snapshots/snapshots__no-header.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│ a          │ b          │
│ c          │ d          │
└────────────┴────────────┘
