crates/gridwell-writer-ansi/tests/snapshots/snapshots__per-column-align.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┬─────────────────────┐
│[1m L          [0m│[1m     C      [0m│[1m          R [0m│[1m J                   [0m│
├────────────┼────────────┼────────────┼─────────────────────┤
│ left       │   center   │      right │ justified text here │
└────────────┴────────────┴────────────┴─────────────────────┘
